# NeuralGL

./: CMakeLists.txt
cmake/: utils.cmake
include/NGL/: export.h  export.hpp  framebuffer.hpp  ngl.hpp
include/NeuralGL/: ngl.hpp
src/: Window.cpp  Window.hpp  error.hpp  framebuffer.cpp  framebuffer.hpp  init.cpp  ngl.cpp
